# ros2-night-patrol

./: README.md  frames_2026-04-15_20.18.57.gv  frames_2026-04-15_20.24.51.gv  frames_2026-04-15_20.29.21.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/learning_tf2_cpp/lib/learning_tf2_cpp/: fixed_frame_tf2_broadcaster  static_turtle_tf2_broadcaster  turtle_tf2_listener
install/learning_tf2_cpp/share/learning_tf2_cpp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/learning_tf2_cpp/share/learning_tf2_cpp/cmake/: learning_tf2_cppConfig-version.cmake  learning_tf2_cppConfig.cmake
install/learning_tf2_cpp/share/learning_tf2_cpp/environment/: ament_prefix_path.dsv  path.dsv
install/learning_tf2_cpp/share/learning_tf2_cpp/launch/: turtle_tf2_demo_launch.xml  turtle_tf2_fixed_frame_demo_launch.xml
install/night_patrol_robot/share/night_patrol_robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/night_patrol_robot/share/night_patrol_robot/cmake/: night_patrol_robotConfig-version.cmake  night_patrol_robotConfig.cmake
install/night_patrol_robot/share/night_patrol_robot/config/: nav2_params.yaml
install/night_patrol_robot/share/night_patrol_robot/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/night_patrol_robot/share/night_patrol_robot/launch/: navigation_launch.py  (+1 more)
install/night_patrol_world/share/night_patrol_world/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/patrol_detection/lib/patrol_detection/: detection_node
install/patrol_detection/share/patrol_detection/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/learning_tf2_cpp/: CMakeLists.txt
src/learning_tf2_cpp/launch/: turtle_tf2_demo_launch.xml
src/night_patrol_robot/: CMakeLists.txt
src/night_patrol_robot/config/: bridge.yaml
src/night_patrol_robot/launch/: navigation_launch.py  robot_nav.launch.py
src/night_patrol_robot/night_patrol_robot/: patrol_node.py
src/night_patrol_world/: CMakeLists.txt  package.xml
src/night_patrol_world/worlds/: city_world.sdf
src/patrol_detection/: setup.cfg  setup.py
src/patrol_detection/patrol_detection/: detection_node.py  patrol_node.py
(+12 files in other folders)
